--- a/style/main.scss
+++ b/style/main.scss
@@ -743,6 +743,74 @@ $color-hover: #8b6396;
   }
 }
 
+//notifiaciones
+.notificaciones-container{
+  background-color: black;
+}
+.notificaciones-layout {
+  background-color: black;
+  display: flex;
+  gap: 30px;
+  padding: 30px;
+
+  .menu-lateral {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+
+    .tab-btn {
+      background: black;
+      color: white;
+      border: 2px solid white;
+      padding: 15px;
+      font-weight: bold;
+      cursor: pointer;
+
+      &.active {
+        background: white;
+        color: black;
+      }
+    }
+  }
+
+  .panel-notificaciones {
+    flex: 1;
+    border: 2px solid white;
+    padding: 20px;
+
+    .tab-content {
+      display: none;
+
+      &.active {
+        display: block;
+      }
+
+      .fila {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 20px;
+        border-bottom: 1px solid #555;
+        padding-bottom: 10px;
+        color: white;
+      }
+
+      .estado {
+        font-weight: bold;
+        text-transform: uppercase;
+        margin-left: 15px;
+      }
+
+      .nota {
+        margin-top: 30px;
+        font-size: 0.9rem;
+        text-align: center;
+        color: #ccc;
+      }
+    }
+  }
+}
+
 
 // Footer
 .footer {
