--- a/style/main.css
+++ b/style/main.css
@@ -644,6 +644,8 @@
 
 .notificaciones-container {
   background-color: black;
+  min-height: 100vh;
+  padding-bottom: 50px;
 }
 
 .notificaciones-layout {
@@ -664,6 +666,7 @@
   padding: 15px;
   font-weight: bold;
   cursor: pointer;
+  font-size: 20px;
 }
 .notificaciones-layout .menu-lateral .tab-btn.active {
   background: white;
@@ -686,8 +689,9 @@
   align-items: center;
   margin-bottom: 20px;
   border-bottom: 1px solid #555;
-  padding-bottom: 10px;
+  padding-bottom: 28px;
   color: white;
+  text-transform: uppercase;
 }
 .notificaciones-layout .panel-notificaciones .tab-content .estado {
   font-weight: bold;
@@ -699,6 +703,25 @@
   font-size: 0.9rem;
   text-align: center;
   color: #ccc;
+}
+
+.titulo-notificaciones {
+  font-size: 2.5rem;
+  font-weight: bold;
+  color: #CB6CE6;
+  text-align: center;
+  margin-bottom: 20px;
+  margin-top: 0;
+}
+
+.notificaciones-container {
+  background-color: black;
+  min-height: 100vh;
+  padding-bottom: 50px;
+}
+
+.smaller {
+  padding: 7px 10px;
 }
 
 .footer {
