--- a/style/main.scss
+++ b/style/main.scss
@@ -746,6 +746,8 @@ $color-hover: #8b6396;
 //notifiaciones
 .notificaciones-container{
   background-color: black;
+  min-height: 100vh;
+  padding-bottom: 50px;
 }
 .notificaciones-layout {
   background-color: black;
@@ -765,6 +767,7 @@ $color-hover: #8b6396;
       padding: 15px;
       font-weight: bold;
       cursor: pointer;
+      font-size: 20px;
 
       &.active {
         background: white;
@@ -791,8 +794,9 @@ $color-hover: #8b6396;
         align-items: center;
         margin-bottom: 20px;
         border-bottom: 1px solid #555;
-        padding-bottom: 10px;
+        padding-bottom: 28px;
         color: white;
+        text-transform: uppercase;
       }
 
       .estado {
@@ -810,6 +814,24 @@ $color-hover: #8b6396;
     }
   }
 }
+.titulo-notificaciones {
+  font-size: 2.5rem;
+  font-weight: bold;
+  color: $color-principal;
+  text-align: center;
+  margin-bottom: 20px;
+  margin-top: 0;
+}
+
+.notificaciones-container {
+  background-color: black;
+  min-height: 100vh;
+  padding-bottom: 50px;
+}
+.smaller{
+  padding: 7px 10px;
+}
+
 
 
 // Footer
